# search_company_vacancies

./: .flake8  README.md  config.py  pyproject.toml
data/: data.py
db/: create_tables.sql  database.ini  db_config.py  db_manager.py
src/: main.py
utils/: hh.py
