[tool.poetry]
name = "employers-work"
version = "0.1.0"
description = ""
authors = ["Kirill8769 <tkkrozn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.black]
max-length = 119

[tool.isort]
max_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
